# kanjitui

./: .gitignore  Agents.md  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml  spec.md  todo.md
.github/workflows/: pages.yml
data/: README.md  user.sqlite
data/licenses/: CC_CEDICT_LICENSE.txt  EDRDG_LICENSE.txt  KANJIVG_CC_BY_SA_3_LICENSE.txt  UNIHAN_LICENSE.txt
docs/: build-font-filter.md  capabilities.md  getting-started.md  gui-reference.md  index.md  macos-packaging.md  release-checklist.md  stubs.md  todo-stubs.md  tui-reference.md  use-cases.md
notes/: implementation_plan.md  phase_a_plan.md  phase_b_plan.md  phase_c_plan.md  phase_d_plan.md  phase_e_plan.md  phase_f_lean_package_plan.md  phase_h_filter_menu_plan.md
scripts/: build_sentences.py  fetch_data.sh  package_macos.sh  release_smoke.sh
src/kanjitui.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_build_integration.py  test_cedict_parser.py  test_cli_export.py  test_config.py  test_filtering.py  test_font_warning.py  test_fontcov.py  test_gui_state.py  test_image_links.py  test_jmdict_parser.py  test_kanjidic2_parser.py  test_migrations.py  test_normalize.py  test_provider_registry.py  test_related_nav.py  test_sentences_parser.py  test_sentences_scope.py  test_setup_resources.py  test_strokeorder.py  test_tatoeba_builder.py  test_tui_actions.py  test_tui_escape_delay.py  test_tui_navigation.py  test_tui_radicals.py  test_tui_router.py  test_unihan_parser.py  test_user_store.py  test_variant_nav.py
(+54 files in other folders)
